# rust-node-benchmark-test

./: index.html  node.csv  node.json  rust.csv  rust.json
ActixWebBackend/: Cargo.toml
ActixWebBackend/src/: main.rs
ActixWebBackend/src/bubble/: mod.rs
ActixWebBackend/src/rand_array/: mod.rs
NodeBackend/: index.js  package-lock.json  package.json  parse.js  readme.md
