[package]
name = "actix_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
aws-config = "1.1.8"
aws-sdk-dynamodb = "1.19.0"
derive_more = "0.99.17"
env_logger = "0.11.3"
log = "0.4.21"
strum = "0.26.2"
strum_macros = "0.26.2"
uuid = "1.8.0"
